# turboquant-mlx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: conftest.py  test_codebook.py  test_demo_text_cache.py  test_outlier.py  test_qjl.py  test_rotation.py  test_split_turboquant.py  test_turboquant.py  test_visual_compare.py
turboquant_mlx/: __init__.py  codebook.py  outlier.py  polar_quant.py  qjl.py  rotation.py
