[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboquant-mlx"
version = "0.1.0"
description = "TurboQuant for MLX (arXiv:2504.19874)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mlx>=0.31.0", "numpy>=1.24"]
license = { text = "MIT" }
authors = [
  { name = "Souranil Sen" },
]
keywords = ["mlx", "quantization", "llm", "inference", "attention"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=9"]

[project.urls]
Homepage = "https://arxiv.org/abs/2504.19874"

[tool.hatch.build.targets.wheel]
packages = ["turboquant_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
